Commit of new html file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 This is a simple HTML file used in testing git an github functionality.
 
+added line1 11:08
+added line2 11:08
+
 </head>
 <body>
 This is John Ulicny's app.
